@startuml
title Itération 3 : Attaque des monstres et du personnage

class Labyrinthe {
    + <static> MUR : char {static}
    + <static> PJ : char {static}
    + <static> MONSTRE : char {static}
    + <static> VIDE : char {static}
    + <static> HAUT : String {static}
    + <static> BAS : String {static}
    + <static> GAUCHE : String {static}
    + <static> DROITE : String {static}
    + murs : boolean

    + Labyrinthe(nom : String)
    + getSuivant(x : int, y : int, action : String) : int []
    + deplacerPosition(action : String)
    + etreFini() : boolean
    + getLengthY() : int
    + getLengthX() : int
    + getMur(x : int, y : int) : boolean
}

class LabyJeu {
    + LabyJeu(labyP : Labyrinthe)
    + update(secondes : double, clavier : Clavier)
    + init()
    + etreFini() : boolean
    + getLaby() : Labyrinthe
}

class LabyDessin {
    - <static> TAILLE_CASE : int {static}
    + dessinerJeu (jeu : Jeu, canvas : Canvas)
}

abstract class Role {
    + x : int
    + y : int
    + pv : int

    + Role(dx : int, dy : int, pvie : int)
    + etrePresent(dx : int, dy : int) : boolean
    + distanceEntre(pos : Position) : int
    {abstract} + <color:deeppink>attaquer(role : Role)</color>
    + <color:deeppink>subirDegats(degats : int)</color>
    + getX()
    + getY()
    + <color:deeppink>getPV(pv : int)</color>
    + <color:deeppink>setPV(pv : int)</color>
}

class Personnage {
    + Personnage(dx : int, dy : int)
    + <color:deeppink>attaquer(role : Role)</color>
}

class Monstre {
    + Monstre(dx : int, dy : int)
    + etreAttire(perso : Personnage, String action)
    + <color:deeppink>attaquer(role : Role)</color>
}

Labyrinthe --> Monstre : monstre "1"
Labyrinthe -> Personnage : perso "1"
Labyrinthe "1" <-- LabyJeu : laby

Monstre -|> Role
Personnage -|> Role

@enduml